force-app/main/default/objects/Capacity_Plan_Staff_Current_Weight__mdt/Capacity_Plan_Staff_Current_Weight__mdt.object-meta.xml
<CustomObject>
    <label>Capacity Plan- Staff Current Weight</label>
    <pluralLabel>Capacity Plan- Staff Current Weight</pluralLabel>
</CustomObject>