force-app/main/default/objects/Capacity_Plan_Staff_Current_Weight__mdt/fields/Case_Load__c.field-meta.xml
<CustomField>
    <fullName>Case_Load__c</fullName>
    <label>Case Load</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>