force-app/main/default/objects/Capacity_Plan_Staff_Current_Weight__mdt/fields/Salary_Grade__c.field-meta.xml
<CustomField>
    <fullName>Salary_Grade__c</fullName>
    <label>Salary Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>26</fullName>
                <default>true</default>
                <label>26</label>
            </value>
            <value>
                <fullName>27</fullName>
            </value>
            <value>
                <fullName>28</fullName>
            </value>
            <value>
                <fullName>29</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>